public interface IDataStructure<T> {
int size();
boolean isEmpty();
Object[] listData();


}
